@@ -5,6 +5,10 @@ Changelog
 1.1 (unreleased)
 ----------------
 
+- Fix a bug where reservations for partially available whole-day allocations
+  did always span the whole day.
+  [deiferni]
+
 - Move timetable rendering from JavaScript to page templates for IE8
   performance optimization.
   [deiferni]
